--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title></title>
         <meta name="description" content="Password Strength Validator">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/inc/stylesheet.css">
+        <link rel="stylesheet" href="inc/stylesheet.css">
     </head>
     <body>
         <header>
@@ -34,6 +34,6 @@
 
         </div>
         
-        <script src="/inc/scripts.js" async defer></script>
+        <script src="inc/scripts.js" async defer></script>
     </body>
 </html>
