--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             
             <div id="message" class="message">
-                <img src="/inc/img/ah-ah-ah.gif">
+                <img src="inc/img/ah-ah-ah.gif">
                 <h3>DO NOT ENTER YOUR PASSWORD IN PLACES YOU DO NOT TRUST</h3>
             </div>
         </div>
