fixing intial opacity when loading

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <span class="bar"></span>
             </div>
             
-            <div id="message" class="message">
+            <div id="message" class="message" style="opacity: 0;">
                 <img src="inc/img/ah-ah-ah.gif">
                 <h3>DO NOT ENTER YOUR PASSWORD IN PLACES YOU DO NOT TRUST</h3>
             </div>
