--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Password Strength Validator">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="inc/stylesheet.css">
+        <title>Password Strength Validator</title>
     </head>
     <body>
         <header>
